--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@ function getIP(json) {
     }
 
 </script>
-<script src="https://api.ipify.org?format=jsonp&callback=getIP"></script> //using this api to get the ip
+<script src="https://api.ipify.org?format=jsonp&callback=getIP"></script>
